Fix chinese navigation bar error & sidebar z-index

--- a/WLCSC/src/index.css
+++ b/WLCSC/src/index.css
@@ -62,6 +62,8 @@ html{
   position: absolute;
   top: 54px;
   right: 0px;
+
+  z-index:40;
 }
 
 .SideBarGroup{
@@ -72,7 +74,7 @@ html{
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   transition: 1s;
-  font-size: small;
+  font-size: medium;
 }
 
 .Dark .SideBarGroup{
@@ -84,8 +86,8 @@ html{
 }
 
 .mobile-nav{
-  padding-top: 5px;
-  padding-top: 5px;
+  padding-top: 10px;
+  padding-top: 10px;
 }
 
 .Dark .SideBarGroup{
